# anibebra

./: Cargo.toml  README.md  out.json
.github/workflows/: rust.yml
src/: config.rs  main.rs  ui.rs
src/api/: anilibria.rs  mod.rs
src/ui/: terminal.rs
