[package]
name = "anibebra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
derive_builder = "0.12.0"
reqwest = { version = "0.11.16", features = ["json"]}
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
serde_url_params = "0.2.1"
serde_with = "2.3.1"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
url = "2.3.1"
